--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "MicrosoftAppId": "",
-  "MicrosoftAppPassword": "",
+  "MicrosoftAppId": "69bf3f4c-cd6c-4ad4-8fe6-00a9d610e186",
+  "MicrosoftAppPassword": "?}}mHfT-Y:0;{Caltmem?-OPws",
   "ScmType": "None"
 }
